--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,9 @@
   "private": true,
   "dependencies": {
     "modernizr": "~2.6.2",
-    "jquery": "~1.11.0"
+    "jquery": "~1.11.0",
+    "backbone": "~1.1.2",
+    "neat": "~1.6.0"
   },
   "devDependencies": {}
 }
